gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-request-handler-deploy
  namespace: decidim-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-request-handler
  template:
    metadata:
      labels:
        app: ai-request-handler
    spec:
      containers:
      - name: ai-request-handler
        image: rg.fr-par.scw.cloud/decidim-ai/ai_request_handler:v1.0.4
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "1"
            memory: "256Mi"
          limits:
            memory: "512Mi"
